--- a/modules/welcome.html
+++ b/modules/welcome.html
@@ -7,7 +7,7 @@
   </div>
   <div class="col-sm-2">
     <button class="btn btn-primary btn-block">
-      Click to start
+      Start Game
     </button>
   </div>
 </form>
