--- a/modules/welcome.html
+++ b/modules/welcome.html
@@ -25,3 +25,8 @@
     Duplicates and words that do not use letters from the source word are not allowed
   </li>
 </ol>
+
+<h3>Source Code</h3>
+<p>
+  <a href="https://github.com/ProLoser/word-scramble">Github repo can be found here.</a>
+</p>
