--- a/modules/welcome.html
+++ b/modules/welcome.html
@@ -24,7 +24,29 @@
   <li>
     Duplicates and words that do not use letters from the source word are not allowed
   </li>
+  <li>
+    The variation list filters down to a list of matches as you enter the new word.
+  </li>
+  <li>
+    You can remove bad variations by clicking the <i class="glyphicon glyphicon-trash"></i> (trash) icon.
+  </li>
+  <li>
+    Press the <i class="glyphicon glyphicon-pencil"></i> (pencil) icon to come back here and start a new round.
+  </li>
 </ol>
+
+<h3>Tip:</h3>
+<ul>
+  <li>
+    Press <kbd>CTRL</kbd>+<kbd>SHIFT</kbd>+<kbd>+</kbd> to make the webpage bigger
+  </li>
+  <li>
+    Press <kbd>CTRL</kbd>+<kbd>SHIFT</kbd>+<kbd>-</kbd> to make the webpage smaller
+  </li>
+  <li>
+    If you're on mac, use <kbd>COMMAND</kbd>+<kbd>SHIFT</kbd>+<kbd>+</kbd>
+  </li>
+</ul>
 
 <h3>Source Code</h3>
 <p>
