--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="modules/app.js"></script>
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="modules/styles.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body ui-view>
 
